2001-04-25  Andy Hertzfeld  <andy@eazel.com>

	* components/news/nautilus-news.c: (draw_rss_logo_image),
	(draw_rss_items), (nautilus_news_configure_event),
	(nautilus_news_button_release_event), (update_size_and_redraw),
	(nautilus_news_size_allocate), (make_news_view):
	
	attach to size_allocate signal to properly resize the panel
	when the width changes, as well as for the first time when the
	size isn't allocated yet; don't draw the time when it overlaps
	the logo, plus other clean-ups.
	
	* nautilus-clean.sh:
	fixed recently introduced problem in nautilus-clean by replacing
	'==' with '=' as suggested by Darin.
	
2001-04-25  Robin * Slomkowski  <rslomkow@eazel.com>

	* nautilus.spec.in: removed mozilla-mail and mozilla-psm dependency
                            http://bugzilla.eazel.com/show_bug.cgi?id=8020

2001-04-25  Dan Mueth  <dan@eazel.com>

	Adding versions from 1_0_1_BRANCH, which are more up-to-date.

	* help/nautilus-release-notes/C/nautilus-release-notes.sgml:
	* help/nautilus-user-manual/C/nautilus-user-manual.sgml:

	Adding version for 1.0.1 and 1.0.2.

	* help/nautilus-quick-reference/C/index.html:

2001-04-25  Andy Hertzfeld  <andy@eazel.com>

	* components/news/nautilus-news.c:
	(nautilus_news_button_release_event)
	fixed bug 8153, scroll wheel crashes news panel, by only
	taking action when button 1 is clicked.
		
	(add_site_from_fields):
	added error handling for when the fields are empty; also, use
	http as the protocol if no protocol is specified.
	
2001-04-25  Darin Adler  <darin@eazel.com>

	* src/nautilus-window-menus.c: (help_menu_about_nautilus_callback):
	Made the Copyright string translatable again, by popular demand.

2001-04-24  Dan Mueth  <dan@eazel.com>

	Left-justifying the labels in the help sidebar.
	Also changed strings to remove colons ":".
	Bug#: 8123

	* components/help/hyperbola-nav-tree.c:
	(hyperbola_navigation_tree_new):

	Updating so that 'make install' works right
	and users building RPM's don't get lots of warnings.